// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Transform array of objects to camelCase 1`] = `
Array [
  Object {
    "firstName": "Stephen",
    "id": 1,
    "lastName": "Nelson",
  },
]
`;

exports[`Transform object to camelCase 1`] = `
Object {
  "firstName": "Stephen",
  "id": 1,
  "lastName": "Nelson",
}
`;

exports[`toCamelCase shorcut:  Transform array of objects to snake_case 1`] = `
Array [
  Object {
    "firstName": "Stephen",
    "id": 1,
    "lastName": "Nelson",
  },
]
`;

exports[`toCamelCase shorcut: Transform to camelCase 1`] = `
Object {
  "firstName": "Stephen",
  "id": 1,
  "lastName": "Nelson",
}
`;
